--- a/web/themes/custom/s3waas/css/base/contrast.css
+++ b/web/themes/custom/s3waas/css/base/contrast.css
@@ -73,3 +73,7 @@ ul.tabs.primary {
   background-color: #121212!important;
   border: 1px solid #fff!important;
 }
+
+a#light {
+  color: black!important;
+}
